Small scope issue fix #44
Fix header's/time's content width and scrollbar

This reverts commit 6be701ff0c3cb322d2fba1419f26a6781941d0a7.

--- a/app/styles/plugin.sass
+++ b/app/styles/plugin.sass
@@ -118,7 +118,7 @@ $timetable-background-color: white !default
 		time
 			display: block
 			width: 100%
-			overflow-x: scroll
+			overflow-x: auto
 			-webkit-overflow-scrolling: touch
 
 		> header
@@ -131,7 +131,7 @@ $timetable-background-color: white !default
 			transform-style: preserve-3d
 
 			ul
-				display: flex
+				display: inline-flex
 				height: $timetable-hour-row-height
 				align-items: center
 
